<resources>
    <string name="app_name">MyLife</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="login">Login :</string>
    <string name="mdp">Mot de passe :</string>
    <string name="confirmation">Confirmation :</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="end">Terminer</string>
    <string name="autreIndicateur">Autre indicateur</string>
    <string name="newIndicateur">Nouvel indicateur</string>
    <string name="messInscription">Vous n\'avez pas de compte ?</string>
    <string name="mesEspaces">Mes Espaces</string>
    <string name="mesIndicateurs">Mes Indicateurs</string>
    <string name="addIndicateur">Mon indicateur</string>
    <string name="nameIndicateur">Nom indicateur :</string>
    <string name="type">Type :</string>
    <string name="addEspace">Mon espace</string>
    <string name="nameEspace">Nom espace :</string>
    <string name="choiseType">Choissisez un type</string>
    <string name="historic">Voir historique de ce jour</string>
    <string name="delete">X</string>
    <string name="edit">EDIT</string>
    <string name="values">Valeurs possibles :</string>
    <string name="nbValues">Nb de valeurs possibles :</string>
    <string name="nbIndicateur">Nb d\'indicateurs :</string>
    <string name="url">URL de l\'API :</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_account">Account</string>
    <string name="changeMDP">Changer le mot de passe</string>
    <string name="deleteAccount">Supprimer le compte</string>

    <string-array name="type_arrays">
        <item>Champ de saisie</item>
        <item>Menu déroulant</item>
        <item>Oui ou Non</item>
        <item>Curseur</item>
    </string-array>

    <string-array name="listNbValues">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="listNbIndicateurs">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


</resources>